...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityLayout">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="#673AB7"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLogout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:text="+"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
