...
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:id="@+id/space"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/btnEdit"
                app:layout_constraintStart_toEndOf="@id/btnDelete" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
